--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "frontend": "cd client && npm start",
-    "dev": "concurrently \"npm run frontend\" \"npm run start\""
+    "client": "npm start --prefix ./client && npm start",
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "keywords": [],
   "author": "Deepak",
